@@ -12,6 +12,7 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.time.LocalDate;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -70,23 +71,37 @@ class CrtdlValidatorServiceTest {
     }
 
     @Test
-    void validInput() throws ValidationException {
-        Crtdl crtdl = new Crtdl(node, new DataExtraction(List.of(patientGroup, new AttributeGroup("test", "https://www.medizininformatik-initiative.de/fhir/core/modul-labor/StructureDefinition/ObservationLab", List.of(), List.of(new Filter("token", "code", List.of(new Code("some-system", "some-code"))))))));
+    void validInput_withoutFilter() throws ValidationException {
+        Crtdl crtdl = new Crtdl(node, new DataExtraction(List.of(patientGroup)));
 
-        assertThat(validatorService.validate(crtdl).dataExtraction().attributeGroups().get(0).attributes()).isEqualTo(
+        var validatedCrtdl = validatorService.validate(crtdl);
+
+        assertThat(validatedCrtdl).isNotNull();
+        assertThat(validatedCrtdl.dataExtraction().attributeGroups().getFirst().compiledFilter()).isNull();
+        assertThat(validatedCrtdl.dataExtraction().attributeGroups().getFirst().attributes()).isEqualTo(
                 List.of(
                         new AnnotatedAttribute("Patient.id", "Patient.id", "Patient.id", false),
                         new AnnotatedAttribute("Patient.meta.profile", "Patient.meta.profile", "Patient.meta.profile", false)
                 ));
-
-        assertThat(validatorService.validate(crtdl).dataExtraction().attributeGroups().get(1).attributes()).isEqualTo(
-                List.of(
-                        new AnnotatedAttribute("Observation.id", "Observation.id", "Observation.id", false),
-                        new AnnotatedAttribute("Observation.meta.profile", "Observation.meta.profile", "Observation.meta.profile", false),
-                        new AnnotatedAttribute("Observation.subject", "Observation.subject", "Observation.subject", false, List.of("patientGroupId"))
-                ));
-
     }
+
+    @Test
+    void validInput_withFilter() throws ValidationException {
+        AttributeGroup patientGroupWithFilter = new AttributeGroup("patientGroupId", "https://www.medizininformatik-initiative.de/fhir/core/modul-person/StructureDefinition/PatientPseudonymisiert", List.of(),
+                List.of(new Filter("date", "birthdate", LocalDate.of(2025, 1, 1), LocalDate.of(2025, 1, 20))));
+        Crtdl crtdl = new Crtdl(node, new DataExtraction(List.of(patientGroupWithFilter)));
+
+        var validatedCrtdl = validatorService.validate(crtdl);
+
+        assertThat(validatedCrtdl).isNotNull();
+        assertThat(validatedCrtdl.dataExtraction().attributeGroups().getFirst().compiledFilter()).isNotNull();
+        assertThat(validatedCrtdl.dataExtraction().attributeGroups().getFirst().attributes()).isEqualTo(
+                List.of(
+                        new AnnotatedAttribute("Patient.id", "Patient.id", "Patient.id", false),
+                        new AnnotatedAttribute("Patient.meta.profile", "Patient.meta.profile", "Patient.meta.profile", false)
+                ));
+    }
+
 
 
 }
